# pond-agent

./: .gitignore  README.md  pyproject.toml
examples/: README.md
examples/sybil_address/: README.md  auto_ml.ipynb
examples/sybil_address/input/: data_dictionary.xlsx  overview.md
examples/sybil_address/logs/: 20241225.log.2024-12-25
examples/sybil_address/output/run_20241226_001002/: report.md  submission.csv
examples/sybil_address/output/run_20241226_001002/scripts/: build_model.py  engineer_features.py  generate_submission.py  preprocess_data.py
src/pond_agent/: __init__.py  llm.py  logging_config.py
src/pond_agent/competition/: __init__.py  agent.py  base.py  data_processor.py  feature_engineer.py  model_builder.py  scraper.py  submission_generator.py
src/pond_agent/competition/prompts/: competition_agent_user.txt  feature_engineer_user.txt  submission_generator_user.txt
tests/: test_agent.py
